src-tauri/tests/snapshots/pipeline_streams__stream_replay@copilot__final-only.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/copilot/final-only.jsonl
---
line_count: 3
checkpoint_count: 1
checkpoints:
  - line_index: 2
    event_type: copilot/assistant_message
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 3
persisted_turns:
  turn_count: 1
  total_blocks: 2
  turns:
    - role: assistant
      block_types:
        - thinking
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - text
