src-tauri/tests/snapshots/pipeline_streams__stream_replay@copilot__plain.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/copilot/plain.jsonl
---
line_count: 5
checkpoint_count: 1
checkpoints:
  - line_index: 4
    event_type: copilot/assistant_message
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 2
persisted_turns:
  turn_count: 1
  total_blocks: 1
  turns:
    - role: assistant
      block_types:
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
