src-tauri/tests/snapshots/pipeline_streams__stream_replay@copilot__tool-failure.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/copilot/tool-failure.jsonl
---
line_count: 4
checkpoint_count: 1
checkpoints:
  - line_index: 3
    event_type: copilot/assistant_message
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 3
persisted_turns:
  turn_count: 2
  total_blocks: 3
  turns:
    - role: assistant
      block_types:
        - tool_use
        - text
    - role: user
      block_types:
        - tool_result
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - tool-call
        - text
