src-tauri/tests/snapshots/pipeline_streams__stream_replay@copilot__tool.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/copilot/tool.jsonl
---
line_count: 8
checkpoint_count: 1
checkpoints:
  - line_index: 7
    event_type: copilot/assistant_message
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 4
persisted_turns:
  turn_count: 2
  total_blocks: 4
  turns:
    - role: assistant
      block_types:
        - thinking
        - tool_use
        - text
    - role: user
      block_types:
        - tool_result
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - tool-call
        - text
